Don't use guava Immutable{Set,Map}
This gets us one step closer to removing guava

Change-Id: I1679c785e8c4c09df785b24d0ea073b745084bf4